2006-04-18  Jeffrey Stedfast  <fejj@novell.com>

	* mail.error.xml: Removed error id "camel-exception" as it was a
	bogus error.

2006-04-14  Jeffrey Stedfast  <fejj@novell.com>

	* em-composer-utils.c (em_utils_handle_receipt): Fixed up the if
	conditional so that 'account' wasn't ever dereferenced when
	NULL. Fixes bug #324327.

2006-04-10  Jeff Cai <jeff.cai@sun.com>

	** Fixes 333243

	* em-folder-tree-model.c (em_folder_tree_model_remove_folders):
	For null uri, don't need remove it.

2006-04-05  Jeff Cai  <jeff.cai@sun.com>

	Fixes bug #333987
	
	* message-list.c (mail_folder_hide_by_flag):
	If CamelMessageInfo is null, don't free it.

2006-03-29  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	* em-folder-view.c (smfv_setup_view_instance): use the flags
	CAMEL_STORE_FOLDER_INFO_SUBSCRIBED instead of
	CAMEL_STORE_FOLDER_INFO_FAST when getting folder info

2006-03-25  Rajeev ramanathan <rajeevramanathan_2004@yahoo.co.in>

	**Fixes #329585

	* mail-config.glade: Changed Remove button to Delete button

	* mail.error.xml: Changed current Layout DELETE [Do not delete] to
	[Do not delete] DELETE

2006-03-22  Patrick Ohly  <patrick.ohly@intel.com>

	* em-utils.c (em_utils_selection_set_urilist): Fixed premature
	memory free. Fixes bug #335203.

2006-03-21  Simon Zheng  <simon.zheng@sun.com>

	Fixed bug #326571

	* em-utils.c (em_filename_make_safe, emu_get_save_filesel):
	(emu_save_parts_response): Add em_filename_make_safe(), and use it
	to allow filenames contain more valid characters when saving
	attachments.

2006-03-20  Srinivasa Ragavan  <sragavan@novell.com>

	* em-folder-view.c (emfv_setup_view_instance): Added code to set
	the mail view column for sent folder.

2006-03-12  Frank Arnold  <farnold@cvs.gnome.org>

	* default/de/Inbox: Updated German translation of default inbox.

2006-03-06  Simon Zheng  <simon.zheng@sun.com>

	Fixes bug #332140

	* em-utils.c (em_utils_temp_save_part): Transfer filenames from